--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,51 @@
 * {
-    margin: 0;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
     text-decoration: none;
     list-style: none;
-    box-sizing: border-box;
+    font-family: 'Vollkorn', Georgia, serif;
 }
 
-body {
-    font-family: 'Volkorn', Georgia, serif;
+img {
+    display: block;
+    width: 100%;
+    border-radius: 5px;
 }
 
-/* Grid Geral */
+/* GRID GERAL */
+
 .estrutura {
     display: grid;
     grid-template-columns: minmax(160px, 1fr) 3fr 300px;
-    grid-template-areas: 
-        "header header header"
-        "sidenav content anuncios"
-        "footer footer footer"
-    ;
+    grid-template-areas:
+        'header header header'
+        'sidenav content anuncios'
+        'footer footer footer';
 }
+
+@media (max-width: 1200px) {
+    .estrutura {
+        grid-template-areas:
+        'header header header'
+        'sidenav content content'
+        'sidenav anuncios anuncios'
+        'footer footer footer';
+    }
+}
+
+@media (max-width: 760px) {
+    .estrutura {
+        grid-template-columns: 100%;
+        grid-template-areas:
+        'header'
+        'sidenav'
+        'content'
+        'anuncios'
+        'footer';
+    }
+}
+
+/*HEADER*/
 
 .header {
     grid-area: header;
@@ -39,27 +65,44 @@ body {
     flex-wrap: wrap;
 }
 
-.header nav ul li + li{
-    margin-left: 30px;
-}
-
 .header nav a {
     display: block;
     padding: 10px;
     color: white;
     font-size: 1.125em;
-    background: rgba(0, 0, 0, .1);
+    background: rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    transition: 0.3s;
+    transition: 0.1s;
 }
 
-header nav a:hover {
-    background: rgba(0, 0, 0, .5);
+.header nav a:hover {
+    background: rgba(0, 0, 0, 0.5);
 }
+
+.header li + li {
+    margin-left: 30px;
+}
+
+@media (max-width: 760px) {
+    .header {
+        grid-template-columns: auto;
+    }
+    .logo {
+        margin-bottom: 20px;
+    }
+    .header nav a {
+        font-size: 1em;
+    }
+    .header li + li {
+        margin-left: 10px;
+    }
+}
+
+/*SIDENAV*/
 
 .sidenav {
     grid-area: sidenav;
-    background-color: #fafbfc;
+    background: #fafbfc;
     padding: 30px;
 }
 
@@ -67,19 +110,58 @@ header nav a:hover {
     display: block;
     min-width: 60px;
     max-width: 100px;
-    margin: 0 auto 30px;
-    background-color: #fff;
+    margin: 0 auto 30px auto;
+    background: white;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
-    transition: .2s ease-in-out;
+    transition: 0.1s ease-out;
 }
 
 .sidenav li a:hover {
-    background-color: #b07dfb;
+    background: #b07dfb;
 }
 
-/* content */
+@keyframes seta {
+    from {
+        right: 30px;
+    }
+    to {
+        right: 20px;
+    }
+}
+
+@media (max-width: 760px) {
+    .sidenav {
+        position: relative;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+    .sidenav::after {
+        content: '→';
+        position: absolute;
+        top: 5px;
+        right: 30px;
+        color: rgba(0, 0, 0, 0.3);
+        animation: seta 0.5s ease-in 0s infinite alternate;
+    }
+    .sidenav ul {
+        display: flex;
+    }
+    .sidenav li {
+        flex: 1 0 60px;
+    }
+    .sidenav {
+        padding: 0 30px;
+    }
+    .sidenav li a {
+        margin: 30px 30px 30px 0;
+    }
+}
+
+/*CONTENT*/
+
 .content {
     grid-area: content;
     max-width: 900px;
@@ -90,23 +172,150 @@ header nav a:hover {
     gap: 30px;
 }
 
-.col-wide {
-    grid-column: -1 / 1;
+@media (max-width: 600px) {
+    .content {
+        grid-template-columns: auto;
+    }
 }
 
-/* anuncios */
+.col-wide {
+    grid-column: 1 / -1;
+}
+
+.imagem-1 {
+    grid-row: span 2;
+    align-self: end;
+}
+
+.item-2 {
+    align-self: end;
+}
+
+/*ESTILOS CONTENT*/
+
+p {
+    font-size: 1.2em;
+    line-height: 1.6;
+    letter-spacing: -0.005em;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+.informacoes p + p {
+    margin-top: 30px;
+}
+
+/*TITULO*/
+
+.titulo {
+    color: #b07dfb;
+}
+
+.titulo h1 {
+    font-size: 3.75em;
+    line-height: 1;
+    font-weight: 700;
+}
+
+.titulo span {
+    font-size: 0.875em;
+    font-style: italic;
+}
+
+/*CARACTERISTICAS*/
+
+.caracteristicas {
+    display: flex;
+    align-items: flex-start;
+}
+
+.caracteristicas > div {
+    width: 80px;
+    text-align: center;
+    background: linear-gradient(135deg, #8844ee, #b07dfb);
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+    position: relative;
+}
+
+.caracteristicas > div:first-child {
+    margin-right: 30px;
+}
+
+.caracteristicas span {
+    display: block;
+    color: #b07dfb;
+}
+
+.numero {
+    font-size: 3em;
+    line-height: 1;
+    margin: 10px auto;
+}
+
+.rotulo {
+    background: white;
+    border-radius: 0 0 5px 5px;
+    padding: 5px 0;
+    position: relative;
+    top: 2px;
+}
+
+.destaque {
+    font-size: 0.875em;
+    color: #b07dfb;
+    max-width: 16em;
+}
+
+.citacao,
+.atributos {
+    align-self: start;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px 0px rgba(44, 44, 44, 0.15);
+    background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+
+.citacao p {
+    font-size: 1.5em;
+    font-style: italic;
+    text-align: center;
+    color: white;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.atributos li {
+    color: white;
+    font-family: Courier, monospace;
+    font-size: 1.125em;
+    padding: 15px;
+}
+
+.atributos li + li {
+    border-top: 2px solid #b07dfb;
+}
+
+/*ANUNCIOS*/
+
 .anuncios {
     grid-area: anuncios;
-    background-color: #fafbfc;
+    background: #fafbfc;
     display: grid;
-    grid-template-columns: 1fr;
-    align-content:  start;
+    align-content: start;
     padding: 30px;
     gap: 30px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
-/* footer */
+/*footer*/
+
 .footer {
     grid-area: footer;
     background: linear-gradient(135deg, #8844ee, #b07dfb);
+}
+
+.footer p {
+    color: white;
+    text-align: center;
+    padding: 30px;
 }
